Closed Bug 1671603 Opened 5 years ago Closed 5 years ago

Missing RTL support for the skeleton UI

Categories

(Firefox :: General, defect, P3)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox86 --- fixed

People

(Reporter: itiel_yn8, Assigned: emmamalysz)

References

(Blocks 2 open bugs)

Details

(Keywords: rtl, Whiteboard: [fxperf:p2][skeleton-ui-experiment-blocker] )

Attachments

(2 files, 1 obsolete file)

Attached image Screencast

STR:

  1. Enable skeleton UI
  2. Set intl.uidirection to 1
  3. Restart Nightly

Doug, do you mind prioritizing this?

Flags: needinfo?(dothayer)
Flags: needinfo?(dothayer)
Priority: -- → P3
Whiteboard: [fxperf:p2]
Severity: -- → S3

Adding the experiment blocker tag for now. I'm going to look into seeing if we can easily invert the X values, otherwise we'll need to disable it for users that have the pref turned on.

Assignee: nobody → emalysz
Status: NEW → ASSIGNED
Whiteboard: [fxperf:p2] → [fxperf:p2][skeleton-ui-experiment-blocker]

Stores the value of intl.uidirection in the registry

Pushed by emalysz@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c6289fd88366 display skeleton ui elements in correct position when RTL is enabled r=dthayer
Attachment #9192656 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Blocks: 1690321
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: