Bug 1671603: display skeleton ui elements in correct position when RTL is enabled r=dthayer

Stores the value of intl.uidirection in the registry

Differential Revision: https://phabricator.services.mozilla.com/D99559